--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "node-sass": "^7.0.3",
     "sass-loader": "^13.0.2",
     "vite": "^3.0.9"
+  },
+  "engines": {
+    "npm": "8.19.2"
   }
 }
